Bug 134847 - Crash:select masterslide on inserted presentation from Writer
Summary: Crash:select masterslide on inserted presentation from Writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2 all versions
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-07-16 05:24 UTC by sawakaze
Modified: 2020-08-10 09:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
ScreenCast (990.51 KB, video/x-matroska)
2020-07-16 05:25 UTC, sawakaze
Details
Repro crash using F6 (843.46 KB, video/x-matroska)
2020-07-18 03:36 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2020-07-16 05:24:35 UTC
Description:
After following step, application crashed.
note: I set Component to "Writer", but the problem may be "impress".
If you see detail, see attachment screencast.

Steps to Reproduce:
1. open Writer.
2. Insert > Object > OLE Object...
3. Select LibreOffice Presentation and press OK button.
-> Insert Presentation..
4. press "Master Slides" button on side bar (blue icon on screencast)
5. double click a master slide.
-> crash

Actual Results:
application crash
not select master slide

Expected Results:
no crash
select master slide


Reproducible: Always


User Profile Reset: No



Additional Info:
I confirm this bug

Version: 7.1.0.0.alpha0+
Build ID: 4cc40d5fbf88588220f7ae80d8122f9218fafeec
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-07-14_10:00:46
Calc: threaded

OS: Linux Ubuntu 
Desktop env: MATE

----

I don't confirm following version

Version: 6.1.1.1
Build ID: 2718b4a18dfcc6a54ebe5f7b801ee7a47fa81e0c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ja-JP (ja_JP.UTF-8); Calc: group threaded
Comment 1 sawakaze 2020-07-16 05:25:06 UTC
Created attachment 163089 [details]
ScreenCast
Comment 2 Xisco Faulí 2020-07-16 08:46:54 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6626281b4a123cfb5e2c8f449b55f4acd46ee198

author	Jim Raykowski <raykowj@gmail.com>	2018-10-05 21:46:41 -0800
committer	Jim Raykowski <raykowj@gmail.com>	2018-10-18 01:08:42 +0200
commit 6626281b4a123cfb5e2c8f449b55f4acd46ee198 (patch)
tree 3540ad24425b07af8a1077d58e8fcf69cb364026
parent 044122de1153bd785ed555c96b6aca67e9d0f739 (diff)
tdf#120231 Focus to document on sidebar tabbar deck tab click

Bisected with: bibisect-linux64-6.2

Adding Cc: to Jim Raykowski
Comment 3 Jim Raykowski 2020-07-17 07:07:10 UTC
I repro. WIP on a fix.
Comment 4 Jim Raykowski 2020-07-18 03:36:55 UTC
Created attachment 163220 [details]
Repro crash using F6

This crash can also be replicated in other ways that grab focus to the document window. Here are steps to repro using F6:

1) Open Writer and insert a Presentation OLE object
menu > Insert > Object > OLE object...
2) Open the sidebar and select Master Slides
Notice this grabs focus to the OLE window frame, not to the OLE object, this seems to be why the crash occurs when Master Slide is applied.
3) Make sure OLE presentation window has focus by clicking on the OLE frame. Arrow keys should scroll the window when it has focus.
4) Press F6 once to move focus to menu or multiple times until OLE frame is focused, indicated by anchor and frame focus squares around the OLE window.
5) Mouse select a Master slide in the sidebar

Result : Crash
Comment 5 Jim Raykowski 2020-07-29 23:44:12 UTC
Maybe not a regression as much as has always been an issue but became more apparent after the patch to return focus to the document when sidebar tabbar tabs are clicked. The crash can be duplicated in many ways that grab focus back to the document.

For a more technical explanation or to test effort to make this crash not happen:
https://gerrit.libreoffice.org/c/core/+/99759
Comment 6 Commit Notification 2020-08-07 04:30:02 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f52f86a3905fc099832187ad20fd29f0ab73b43f

tdf#134847 fix nullptr use crash

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-08-10 09:30:54 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 6ad2f463784a24c566477cdd60ae729651bb8564
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Jim Raykowski, thanks for fixing this issue!
Comment 8 Commit Notification 2020-08-10 09:31:53 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/41e180f500a42a3afd53b673f538becd75a8f120

tdf#134847 fix nullptr use crash

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.