tdf#134847 fix nullptr use crash

Grabbing focus back to the document when OLE object last had focus sets
focus to the frame containing the OLE object. sd::ViewShell is no good
in this case and crashes when undo manager tries to pass ViewShellId to
EnterListAction. Other areas in the code set ViewShellId(-1) and then
check if ViewShell is good before getting ViewShellId. This patch
follows these practices.

Change-Id: I89093686c4d98148ac032832711f80479366741d